--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Git and Github learning!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure repellat necessitatibus ducimus quisquam cupiditate dicta ad sit impedit reiciendis natus!</p>
 </body>
 </html>
