Link jquery and script file to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Git and Github learning!</h1>
     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure repellat necessitatibus ducimus quisquam cupiditate dicta ad sit impedit reiciendis natus!</p>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
