Ordered list added in index.html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <h1>Git and Github learning!</h1>
     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure repellat necessitatibus ducimus quisquam cupiditate dicta ad sit impedit reiciendis natus!</p>
 
+    <ol type="i">
+        <li>Bangladesh</li>
+        <li>India</li>
+        <li>Pakistan</li>
+        <li>Srilanka</li>
+        <li>Australia</li>
+        <li>England</li>
+        <li>South Africa</li>
+        <li>West Indies</li>
+        <li>Afganistan</li>
+        <li>Ireland</li>
+        <li>Scotland</li>
+    </ol>
+
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
 </body>
