--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <li>Scotland</li>
     </ol>
 
+    <a href="">East West University</a>
+
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
 </body>
