I have added a paragraph

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     <a href="">East West University</a>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti animi doloribus ipsam necessitatibus veritatis. Laudantium nesciunt similique nemo pariatur eaque, recusandae saepe veniam consequatur vero maiores quia at assumenda modi!</p>
+
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
 </body>
